# any-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLIC_RELEASE_CHECKLIST.md  README.md  pyproject.toml
any_agent/: __init__.py  client.py  config.py  types.py  utils.py
archive/: research-any-agent.md  research.md
docs/: auto-execution-design.md  configuration.md  context-management-design.md  context-utilities-design.md  implementation.md  provider-compatibility.md  roadmap.md  technical-design.md
examples/: calculator_tools.py  config_examples.py  context_management.py  env_config_complete.py  git_commit_agent.py  hooks_example.py  interrupt_demo.py  log_analyzer_agent.py  ollama_chat.py  simple_lmstudio.py  simple_tool.py  simple_with_env.py  test_llamacpp.py  test_lmstudio.py  test_multiturn_network.py  test_network_lmstudio.py  test_ollama_kimi.py  test_timeout.py  tool_use_agent.py
open_agent/: __init__.py  client.py  config.py  context.py  hooks.py  tools.py  types.py  utils.py
tests/: conftest.py  test_agent_options.py  test_auto_execution.py  test_client.py  test_config.py  test_context.py  test_hooks.py  test_interrupt.py  test_query.py  test_tools.py  test_utils.py
tests/integration/: test_client_behaviour.py  test_multiturn_network.py  test_network_lmstudio.py  test_ollama_kimi.py
