[project]
name = "any-agent"
version = "0.1.0"
description = "Claude Agent SDK-style API for local/self-hosted LLMs"
authors = [
    {name = "Any-Agent Contributors"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "ai", "agent", "local", "openai", "ollama", "lmstudio", "llamacpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/slb350/any-agent"
Repository = "https://github.com/slb350/any-agent"
Documentation = "https://github.com/slb350/any-agent/tree/main/docs"
Issues = "https://github.com/slb350/any-agent/issues"

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["any_agent"]
