[project]
name = "open-agent-sdk"
version = "0.4.1"
description = "Lightweight Python SDK for local/self-hosted LLMs via OpenAI-compatible endpoints"
authors = [
    {name = "Open Agent SDK Contributors"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llm", "ai", "agent", "local", "openai", "ollama", "lmstudio", "llamacpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/slb350/open-agent-sdk"
Repository = "https://github.com/slb350/open-agent-sdk"
Documentation = "https://github.com/slb350/open-agent-sdk/tree/main/docs"
Issues = "https://github.com/slb350/open-agent-sdk/issues"

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
context = [
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["open_agent"]
